[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hocon = "~0.7"
log = "~0.4"
anyhow = "~1.0"
thiserror = "~1.0"
futures = "0.3"
etcd-client = "~0.9.2"
async-trait = "0.1.53"
env_logger = "0.9.0"

    [dependencies.uuid]
    version = "1.0.0"
    features = [
        "v4",                # Lets you generate random UUIDs
        "fast-rng",          # Use a faster (but still sufficiently random) RNG
        "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    ]

    [dependencies.rdkafka]
    version     = "~0.28"
    features    = ["ssl", "sasl", "cmake-build"]

    [dependencies.tokio]
    version = "1.17"
    features = ["full"]